# touhou-card-bot

./: .env.example  .flake8  .gitignore  db.json  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
migrations/0000/: describe.json  migrations.sql
resources/: cards.json
src/bot/: __init__.py  __main__.py
src/bot/cards/: __init__.py  card.py  interactions.py
src/bot/game/: __init__.py  converter.py  discord_game.py  game.py  player.py  round.py
src/bot/plugins/: deck.py  game.py  profile.py  rules.py  tictactoe.py  utility.py  utils.py
src/cards/: __init__.py  card.py  interactions.py
src/db/: __init__.py  conn.py  db.py  json_db.py  modal.py
src/game/: __init__.py  components.py  converter.py  discord_game.py  game.py  player.py
src/images/: __init__.py  generate.py  hand_image.py
src/utils/: __init__.py  config.py  countdown.py  crescent.py  event_or_timeout.py  task_group.py
src/visuals/: __init__.py  cards_array_image.py  emoji.py  hand_image.py  text_formatting.py
